outputs/tsp_constructive-constructive/2025-09-20_00-37-24/evaluations/problem_eval6652394880692773129_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 2
    { # This algorithm prioritizes the destination if unvisited, otherwise selects the next node by considering both distance to current node and the minimum distance to any of the other unvisited nodes.}
    ^
SyntaxError: '{' was never closed

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 2
    { # This algorithm prioritizes the destination if unvisited, otherwise selects the next node by considering both distance to current node and the minimum distance to any of the other unvisited nodes.}
    ^
SyntaxError: '{' was never closed
